--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,43 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Dashboard</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-row>
+    <ion-col col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3>
+    <ion-card text-center padding>
+      <h1 class="headingtext"><b>{{newsCount}}</b></h1>
+      <p>News</p>
+    </ion-card>
+    </ion-col>
+    <ion-col col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3>
+      <ion-card text-center padding>
+        <h1 class="headingtext">
+          <b>{{usersCount}}</b>
+        </h1>
+        <p>Users</p>
+      </ion-card>
+    </ion-col>
+    <ion-col col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3>
+      <ion-card text-center padding>
+        <h1 class="headingtext">
+          <b>{{businessCount}}</b>
+        </h1>
+        <p>Businesses</p>
+      </ion-card>
+    </ion-col>
+    <ion-col col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3>
+      <ion-card text-center padding>
+        <h1 class="headingtext">
+          <b>{{localsCount}}</b>
+        </h1>
+        <p>Local Listings</p>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  
+  
 </ion-content>
