--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content id="login" text-center padding>
   <div class="login" padding>
-    <img src="assets/imgs/horizon-logo.png" />
+    <img style="max-width:200px" src="assets/imgs/icon.png" />
     <!-- <h1 style="padding-bottom:10%; padding-top: -2em">Company Login</h1> -->
 
     <div id="form-wrap">
