--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -22,12 +22,12 @@
       Unit {{user.unit}}
     </ion-card-content>
     <ion-row no-padding>
-      <!-- <ion-col text-right>
+      <ion-col text-right>
         <button ion-button clear small color="danger" icon-start (tap)="removeUser(user)">
           <ion-icon name='trash'></ion-icon>
           Delete
         </button>
-      </ion-col> -->
+      </ion-col>
     </ion-row>
 
     </ion-card>
